--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ html {
 }
 
 body {
-	background-color: #E4E0D8;
+	background-color: #fbf7f5;
 }
 
 main {
@@ -119,7 +119,6 @@ Buttons
 .button2,
 .button3 {
 	display: flex;
-	border-radius: 4px;
 	flex: 2 1 auto;
 	background-color: #0E151D;
 	color: #DFCEE4;
@@ -367,8 +366,8 @@ CTA
 
 #sign-up-section {
 	display: flex;
-	justify-content: flex-start;
-	align-items: flex-start;
+	justify-content: center;
+	align-items: center;
 	background: white;
 	padding-bottom: .71rem;
 }
@@ -378,17 +377,19 @@ CTA
 	position: relative;
 	background-color: hsla(44, 48%, 95%, 85%);
 	top: 4rem;
+/*
 	padding: .75rem .4rem .75rem .4rem;
-	max-width: 40%;
+*/
+	max-width: 50%;
 	max-height: auto;
 	margin-bottom: 4rem;
 	margin-left: 3rem;
-	border-radius: 0.125rem;
-	box-shadow: 5px 5px 5px black;
+	border-radius: 1rem;
+	border: 5px solid #454545;
 }
 
 .content {
-	padding: .5rem;
+	padding: 1rem .5rem;
 }
 
 @media only screen and (max-width: 1060px) {
@@ -459,9 +460,76 @@ CTA
 	}
 }
 
+/*===================================
+Hotspot
+===================================*/
+
+
+#hotspot {
+	left: 15%;
+	top: 0%;
+}
+
+.hotspot {
+	width: 10rem;
+	height: 90px;
+	line-height: 18px;
+	text-align: center;
+	position: absolute;
+	border-radius: 5px;
+	font: sans-serif;
+}
+
+
+
+.hotspot .empty-text {
+	width: 100%;
+	height: 100%;
+}
+
+.empty-text {
+	font-family: sans-serif;
+	font-size: 1rem;
+	margin-top: 1rem;
+}
+
+.hotspot .empty-text:hover {
+	cursor: pointer;
+}
+
+.hover-popup {
+	display: none;
+	z-index: 1;
+}
+
+.hotspot.clicked {
+	display: block;
+}
+
+.hotspot:hover .hover-popup,
+.hotspot2:hover .hover-popup2 {
+	display: block;
+	position: absolute;
+	margin-left: 1rem;
+	left: 100%;
+	top: 0;
+	width: 10rem;
+	height: 11rem;
+	line-height: 1rem;
+	text-align: center;
+	background-color: white;
+	position: absolute;
+	border-radius: 5px;
+	border: 2px solid rgb(38, 38, 38);
+	font-family: san-serif;
+	font-size: .75rem;
+}
+
 /*====================================
 Features
 ====================================*/
+
+
 
 #features,
 #features2 {
@@ -469,7 +537,7 @@ Features
 	column-gap: 0.75rem;
 	height: 16rem;
 	width: 80%;
-	background-color: #E4E0D8;
+	background-color: #fbf7f5;
 	flex-direction: row;
 }
 
@@ -506,10 +574,6 @@ Features
 	width: 100%;
 }
 
-
-.description {
-	display: none;
-}
 
 /*
 .row1 p,
@@ -550,7 +614,7 @@ Newsletter
 ===================================*/
 
 #newsletter {
-	background: white;
+	background:white;
 }
 
 h2.newsletter-title {
