--- a/css/style.css
+++ b/css/style.css
@@ -560,6 +560,11 @@ Features
 	margin: .75rem auto .9rem auto;
 }
 
+#features h2 {
+	font-family: "Balsamiq Sans", Arial, sans-serif;
+	text-align: left;
+}
+
 .image-container {
 	max-height: 13rem;
 	margin: 0 auto .5rem auto;
@@ -576,13 +581,93 @@ Features
 	margin: 0 auto;
 	object-fit: fill;
 }
-/*
+
 .feature video {
 	display: flex;
 	margin: 0 auto;
 	object-fit: fill;
 }
+
+.image-container video {
+	max-height: 13rem;
+	position: center;
+	object-fit: fill;
+	width: 100%;
+	overflow: hidden;
+	box-shadow: 4px 5px 2px gray;
+	border-radius: 8px;
+}
+
+#features #image-one video {
+	aspect-ratio: 9 / 9;
+}
+
+
+#hotspot {
+	left: 15%;
+	top: 0%;
+}
+/*
+.hotspot {
+	width: 12rem;
+	height: 90px;
+	line-height: 18px;
+	text-align: center;
+	position: absolute;
+	border-radius: 5px;
+	font: sans-serif;
+}
 */
+.hotspot .empty-text {
+	width: 100%;
+	height: 100%;
+}
+/*.empty-text {
+	font-family: "Balsamiq Sans", Arial, sans-serif;
+	font-size: 1rem;
+	margin-top: 1rem;
+	text-align: left;
+}
+*/
+.hotspot .empty-text:hover {
+	cursor: pointer;
+}
+
+.hover-popup {
+	display: none;
+	z-index: 1;
+}
+
+.hotspot.clicked {
+	display: block;
+}
+
+.hotspot:hover .hover-popup,
+.hotspot2:hover .hover-popup2 {
+	display: block;
+	position: absolute;
+	left: 80%;
+	top: 0;
+	/*
+	width: 10rem;
+	height: 11rem;
+	*/
+	line-height: 1rem;
+	text-align: center;
+	background-color: white;
+	position: absolute;
+	border-radius: 5px;
+	border: 2px solid rgb(38, 38, 38);
+	font-family: san-serif;
+	font-size: .75rem;
+}
+
+
+
+
+
+
+
 .row1,
 .row2,
 .row3,
@@ -591,15 +676,6 @@ Features
 }
 
 
-/*
-.row1 p,
-.row2 p,
-.row3 p,
-.row4 p {
-	display: none;
-}
-*/
-
 @media only screen and (max-width: 420px) {
 	#features
 	#features2 {
@@ -607,16 +683,6 @@ Features
 }
 }
 
-/*
-.feature p {
-	padding: 1.5rem 1.1rem;
-	width: 100%;
-	font-family: sans-serif;
-	min-height: 40%;
-	line-height: .9rem;
-
-}
-*/
 
 .feature img,
 .feature p {
