--- a/css/style.css
+++ b/css/style.css
@@ -57,12 +57,9 @@ p.striking {
 }	
 
 p {
-	border: 1px solid #000000;
-	padding: 1rem;
-	margin: 10px;
-	width: 30%;
+	padding-top: .5rem;
 	font-size: 0.75rem;
-	text-align: center;
+	text-align: left;
 }
 
 p.app {
@@ -476,13 +473,11 @@ Hotspot
 
 
 #hotspot {
-	left: 15%;
 	top: 0%;
 }
 
 .hotspot {
-	width: 12rem;
-	height: 90px;
+	width: 16rem;
 	line-height: 18px;
 	text-align: center;
 	position: absolute;
@@ -521,13 +516,13 @@ Hotspot
 .hotspot2:hover .hover-popup2 {
 	display: block;
 	position: absolute;
-	left: 80%;
 	top: 0;
+	right: 20%;
 	width: 10rem;
 	height: 11rem;
 	line-height: 1rem;
 	text-align: center;
-	background-color: white;
+	background-color: hsla(0, 0, 0, 1, 50%);
 	position: absolute;
 	border-radius: 5px;
 	border: 2px solid rgb(38, 38, 38);
@@ -552,14 +547,19 @@ Features
 }
 
 
-#features {
+#features,
+#features2 {
 	margin: 1.8rem auto 0 auto;
 }
 
 #features2 {
+	margin-bottom: 2rem;
+}
+/*
+#features2 {
 	margin: .75rem auto .9rem auto;
 }
-
+*/
 #features h2 {
 	font-family: "Balsamiq Sans", Arial, sans-serif;
 	text-align: left;
@@ -589,7 +589,6 @@ Features
 }
 
 .image-container video {
-	max-height: 13rem;
 	position: center;
 	object-fit: fill;
 	width: 100%;
@@ -598,13 +597,21 @@ Features
 	border-radius: 8px;
 }
 
-#features #image-one video {
+#features #image-one #image-two video {
 	aspect-ratio: 9 / 9;
+}
+
+#features p {
+	width: 80%;
+}
+
+#features2 .row3 p {
+	width: 60%;
 }
 
 
 #hotspot {
-	left: 15%;
+	left: 0%;
 	top: 0%;
 }
 /*
@@ -684,9 +691,12 @@ Features
 }
 
 
-.feature img,
-.feature p {
+.feature img {
 	margin: auto;
+	width: 100%;
+}
+
+.feature p {
 	width: 100%;
 }
 
