--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ p.striking {
 	margin-top: .05rem;
 	margin-bottom: 0rem;
 	margin-left: .15rem;
-	align: center;
+	text-align: center;
 	width: 100%;
 	border-style: none;
 	padding-top: .8rem;
@@ -477,9 +477,9 @@ Hotspot
 }
 
 .hotspot {
-	width: 16rem;
+	width: 16em;
 	line-height: 18px;
-	text-align: center;
+	text-align: left;
 	position: absolute;
 	border-radius: 5px;
 	font: sans-serif;
@@ -516,16 +516,19 @@ Hotspot
 .hotspot2:hover .hover-popup2 {
 	display: block;
 	position: absolute;
-	top: 0;
-	right: 20%;
-	width: 10rem;
-	height: 11rem;
+	padding: 1.5rem;
+	top: 1rem;
+	width: 18rem;
+	height: 9rem;
 	line-height: 1rem;
 	text-align: center;
-	background-color: hsla(0, 0, 0, 1, 50%);
+	background: white;
+	opacity: 90%;
 	position: absolute;
+/*
 	border-radius: 5px;
 	border: 2px solid rgb(38, 38, 38);
+*/
 	font-family: san-serif;
 	font-size: .75rem;
 }
@@ -546,28 +549,37 @@ Features
 	flex-direction: row;
 }
 
-
 #features,
 #features2 {
-	margin: 1.8rem auto 0 auto;
+	margin: 0 auto;
 }
 
 #features2 {
-	margin-bottom: 2rem;
+	margin-bottom: 5.5rem;
 }
 /*
 #features2 {
 	margin: .75rem auto .9rem auto;
 }
 */
-#features h2 {
+#features h2,
+#features2 h2 {
 	font-family: "Balsamiq Sans", Arial, sans-serif;
 	text-align: left;
+	margin-top: 2rem;
+}
+
+#features2 h2 {
+	margin-top: 4rem;
+}
+
+.textOne a {
+	color: blue;
 }
 
 .image-container {
 	max-height: 13rem;
-	margin: 0 auto .5rem auto;
+	margin: 0 auto;
 	position: center;
 	object-fit: fill;
 	width: 100%;
@@ -597,19 +609,17 @@ Features
 	border-radius: 8px;
 }
 
-#features p {
+#features p,
+#features2 p {
 	width: 80%;
 }
 
-#features2 .row3 p {
-	width: 60%;
-}
-
-
+/*
 #hotspot {
 	left: 0%;
 	top: 0%;
 }
+*/
 /*
 .hotspot {
 	width: 12rem;
@@ -621,10 +631,12 @@ Features
 	font: sans-serif;
 }
 */
+/*
 .hotspot .empty-text {
 	width: 100%;
 	height: 100%;
 }
+*/
 /*.empty-text {
 	font-family: "Balsamiq Sans", Arial, sans-serif;
 	font-size: 1rem;
@@ -632,6 +644,7 @@ Features
 	text-align: left;
 }
 */
+/*
 .hotspot .empty-text:hover {
 	cursor: pointer;
 }
@@ -649,12 +662,12 @@ Features
 .hotspot2:hover .hover-popup2 {
 	display: block;
 	position: absolute;
-	left: 80%;
 	top: 0;
 	/*
 	width: 10rem;
 	height: 11rem;
 	*/
+	/*
 	line-height: 1rem;
 	text-align: center;
 	background-color: white;
@@ -664,12 +677,7 @@ Features
 	font-family: san-serif;
 	font-size: .75rem;
 }
-
-
-
-
-
-
+*/
 
 .row1,
 .row2,
@@ -677,7 +685,6 @@ Features
 .row4 {
 	width: 100%;
 }
-
 
 @media only screen and (max-width: 420px) {
 	#features
@@ -717,16 +724,16 @@ h2.newsletter-title {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	height: 100vh;
+	height: 80vh;
 }
 
 .news-form {
 	background-color: hsla(44, 48%, 95%, 85%);
 	width: 45%;
 	border-radius: 8px;
-	padding: .5rem 1rem;
+	padding: .5rem .5rem;
 	box-shadow: 0 10px 25px rgba(92, 99, 105, .2);
-	margin: 1rem 2rem 1rem 1rem;	
+	margin: 1rem 1rem 1rem 1rem;	
 	border-radius: 1rem;
 	border: 5px solid #454545;
 }
@@ -737,21 +744,21 @@ h2.newsletter-title {
 
 .label {
 	position: absolute;
-	bottom: 1rem;
-	margin-bottom: .25rem;
+	bottom: .65rem;
+	margin-bottom: 1rem;
 	padding: 0 4px;
 	color: #0E151D;
-	font-size: .5rem;
+	font-size: 1rem;
 	font-family: sans-serif;
 	font-weight: bold;
 }
 
 .inputContainer {
 	position: relative;
-	height: 1.15rem;
-	width: 90%;
+	height: 1.5rem;
+	width: 75%;
 	margin-bottom: 20px;
-	margin-top: 1rem;
+	margin-top: 2rem;
 }
 
 .input {
@@ -762,7 +769,7 @@ h2.newsletter-title {
 	width: 100%;
 	border: 1px solid black;
 	border-radius: 7px;
-	font-size: .5rem;
+	font-size: .75rem;
 	padding: 0 20px;
 	outline: none;
 	background: none;
@@ -782,7 +789,7 @@ p.striking2 {
 	margin-top: .05rem;
 	margin-bottom: 0rem;
 	margin-left: .15rem;
-	align: center;
+	text-align: center;
 	width: 100%;
 	border-style: none;
 	padding-top: .8rem;
