--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ p.striking {
 	border-style: none;
 	padding-top: .8rem;
 	padding-bottom: .5rem;
-}	
+}
 
 p {
 	padding-top: .5rem;
@@ -139,7 +139,7 @@ Buttons
 
 .button:hover a,
 .button2:hover a {
-	color:#DFCEE4;
+	color: #DFCEE4;
 }
 
 p.app::after {
@@ -150,140 +150,6 @@ p.app::after {
 
 .center {
 	text-align: center;
-}
-
-@media only screen and (max-width: 1160px) {
-
-	.button,
-	.button2 {
-		flex: 2 1 auto;
-		float: none;
-		padding: 1rem .75rem 1rem .75rem;
-		max-width: 100%;
-		height: auto;
-		align-content: center;
-		text-align: center;
-	}
-}
-
-@media only screen and (max-width: 920px) {
-
-	.button,
-	.button2 {
-		padding: .6rem .3rem .6rem .3rem;
-	}
-}
-
-@media only screen and (max-width: 897px) {
-	.main-content {
-		top: 0rem;
-	}
-
-	.buttonGroup {
-		display: flex;
-		align-items: center;
-		justify-content: center;
-	}
-
-	.button,
-	.button2 {
-		flex: auto;
-		place-content: .05rem;
-		border-radius: 3px;
-		font-size: .5rem;
-		text-align: center;
-		max-width: 100%;
-		height: auto;
-		padding: .5rem .3rem .5rem .3rem;
-	}
-}
-
-@media only screen and (max-width: 870px) {
-
-	.button,
-	.button2 {
-		padding: 2%;
-		margin: .2rem;
-	}
-}
-
-@media only screen and (max-width: 813px) {
-
-	.button,
-	.button2 {
-		padding: 1.5%;
-		margin: .1rem;
-	}
-}
-
-
-@media only screen and (max-width: 785px) {
-
-	.button,
-	.button2 {
-		padding: 4%;
-		margin: 1rem;
-	}
-
-	h2 {
-		font-size: 1rem;
-	}
-
-	.striking {
-		font-size: .75rem;
-		margin-bottom: .3rem;
-		margin-top: .3rem;
-		margin-left: .15rem;
-	}
-
-	span {
-		font-size: .6rem;
-	}
-
-	.main-content {
-		top: 2.3rem;
-	}
-
-	.buttonGroup {
-		display: flex;
-		align-items: center;
-		justify-content: stretch;
-	}
-
-
-	.button,
-	.button2 {
-		display: flex;
-		flex: auto;
-		border-radius: 3px;
-		margin-top: .4rem;
-		padding-top: .75rem;
-		padding-bottom: .75rem;
-		padding-right: 6%;
-		padding-left: 6%;
-		font-size: .5rem;
-		text-align: center;
-		width: 100%;
-		height: auto;
-	}
-}
-
-
-@media only screen and (max-width: 505px) {
-
-	.button,
-	.button2 {
-		padding: 4%;
-	}
-}
-
-@media only screen and (max-width: 435px) {
-
-	.button,
-	.button2 {
-		padding: 1%;
-		margin: .15rem;
-	}
 }
 
 /*=================================
@@ -327,59 +193,10 @@ header {
 	color: #DFCEE4;
 }
 
-
-@media only screen and (min-width: 680px) {
-	.mobile ul {
-		display: none;
-	}
+.mobile ul {
+	display: none;
 }
 
-@media only screen and (max-width: 680px) {
-	.mobile ul {
-		display: none;
-	}
-
-	.head-nav ul {
-		display: none;
-	}
-
-	header .content {
-		padding: .5rem 0;
-	}
-
-	.mobile ul {
-		display: left;
-		align-items: left;
-		width: 100%;
-	}
-
-	.logo {
-		display: none;
-	}
-}
-
-@media only screen and (max-width: 1280px) {
-	.head-nav li {
-		float: left;
-		color: #DFCEE4;
-	}
-
-	.head-nav li {
-		float: left;
-	}
-}
-
-@media only screen and (max-width: 1050px) {
-	header {
-		width: 100%;
-		height: auto;
-	}
-
-	main {
-		width: 100%;
-		height: auto;
-	}
-}
 
 /*===================================
 CTA
@@ -410,7 +227,7 @@ CTA
 	position: relative;
 	background-color: hsla(44, 48%, 95%, 85%);
 	top: 4rem;
-/*
+	/*
 	padding: .75rem .4rem .75rem .4rem;
 */
 	max-width: 50%;
@@ -424,80 +241,6 @@ CTA
 	padding: 1rem .5rem;
 }
 
-@media only screen and (max-width: 1060px) {
-	#sign-up-cta {
-		justify-content: center;
-		max-width: 65%;
-		height: auto;
-		margin-left: 1rem;
-		top: 3.5rem;
-	}
-}
-
-@media only screen and (max-width: 680px) {
-
-	#sign-up-section {
-		justify-content: center;
-		align-items: start;
-		background-image: none;
-		background-position: top;
-		width: auto;
-		height: auto;
-		position: relative;
-		padding-bottom: 0;
-	}
-
-	#sign-up-cta {
-		margin-top: 0rem;
-		top: 3rem;
-		padding: 1rem 0 .5rem 0;
-		max-width: 100%;
-		margin-bottom: 0;
-		margin-left: 0;
-		border-radius: 0;
-	}
-
-	.hero {
-		justify-content: center;
-		align-items: start;
-	}
-}
-
-@media only screen and (max-width: 420px) {
-
-	#sign-up-section {
-		justify-content: center;
-		align-items: start;
-		background-image: none;
-		background-position: top;
-		width: auto;
-		height: auto;
-		position: relative;
-		padding-bottom: 0;
-	}
-
-	#sign-up-cta {
-		margin-top: 0rem;
-		top: 3rem;
-		padding: 1rem 0 .5rem 0;
-		max-width: 100%;
-		margin-bottom: 0;
-		margin-left: 0;
-		border-radius: 0;
-	}
-
-	.hero {
-		justify-content: center;
-		align-items: start;
-	}
-}
-
-@media only screen and (max-width: 980px) {
-	#sign-up-section {
-		padding-top: 2rem;
-		background: white;
-	}
-}
 
 /*===================================
 Hotspot
@@ -557,7 +300,7 @@ Hotspot
 	background: white;
 	opacity: 90%;
 	position: absolute;
-/*
+	/*
 	border-radius: 5px;
 	border: 2px solid rgb(38, 38, 38);
 */
@@ -590,6 +333,7 @@ Features
 #features2 {
 	margin-bottom: 5.5rem;
 }
+
 /*
 #features2 {
 	margin: .75rem auto .9rem auto;
@@ -700,7 +444,7 @@ Features
 	width: 10rem;
 	height: 11rem;
 	*/
-	/*
+/*
 	line-height: 1rem;
 	text-align: center;
 	background-color: white;
@@ -719,36 +463,6 @@ Features
 	width: 100%;
 }
 
-@media only screen and (max-width: 980px) {
-	.hotspot {
-		width: 12em;
-	}
-	
-	.hotspot .empty-text {
-		width: 100%;
-		height: auto;
-	}
-
-	#features,
-	#features2 {
-		flex-direction: column;
-		justify-content: space-between;
-	}
-
-	#features .feature.row2 h2 {
-		padding-top: 8rem;
-	}
-
-	#features2 .feature.row3,
-	#features2 .feature.row4 {
-		margin-top: 9rem;
-	}
-
-	#features .feature.row1 h2 {
-		margin-top: .1rem;
-	}
-}
-
 /*
 .hotspot {
 	width: 10rem;
@@ -759,30 +473,6 @@ Features
 	width: 60%;
 }
 */
-@media only screen and (max-width: 980px) {
-	#features {
-		padding-top: 3rem;
-}
-
-	#features2 .row3 {
-		padding-top: 5rem;
-		padding-bottom: 0rem;
-		margin-bottom: 0rem;
-	}
-
-	#features2 .row4 {
-		padding-top: 0rem;
-	}
-
-	#features2 .feature.row4 {
-		margin-top: 6rem;
-	}
-}
-
-
-
-
-
 
 .feature img {
 	margin: auto;
@@ -793,24 +483,12 @@ Features
 	width: 100%;
 }
 
-@media only screen and (max-width: 1204px) {
-	.hotspot video {
-		width: 12em;
-		margin-left: 0rem;
-	}
-
-	#features2 {
-		margin-bottom: 3.5rem;
-	}
-}
-
-
 /*===================================
 Newsletter
 ===================================*/
 
 #newsletter {
-	background:white;
+	background: white;
 }
 
 h2.newsletter-title {
@@ -819,6 +497,7 @@ h2.newsletter-title {
 	font-size: 1.5rem;
 	font-family: sans-serif;
 	text-align: center;
+	padding-top: 1rem;
 }
 
 .signupForm {
@@ -834,7 +513,7 @@ h2.newsletter-title {
 	border-radius: 8px;
 	padding: .5rem .5rem;
 	box-shadow: 0 10px 25px rgba(92, 99, 105, .2);
-	margin: 1rem 1rem 1rem 1rem;	
+	margin: 1rem 1rem 1rem 1rem;
 	border-radius: 1rem;
 	border: 5px solid #454545;
 }
@@ -896,7 +575,7 @@ p.striking2 {
 	border-style: none;
 	padding-top: .8rem;
 	padding-bottom: .5rem;
-}	
+}
 
 
 .submitBtn {
@@ -925,52 +604,9 @@ p.striking2 {
 
 
 .submitBtn:hover a {
-	color:#E4E0D8;
+	color: #E4E0D8;
 }
 
-@media only screen and (max-width: 980px) {
-	#newsletter {
-		clear:both;
-		margin-top: 30rem;
-	}
-}
-
-
-@media only screen and (max-width: 920px) {
-
-	.input {
-		left: 1rem;
-	}
-
-	.label {
-		left: 1rem;
-	}
-
-	.submitBtn {
-		margin-left: 1rem;
-	}
-
-	.news-form {
-		width: 75%;
-	}
-
-	.newsletter-title {
-		padding-top: 1rem;
-	}
-}
-/*
-@media only screen and (max-width: 1280px) {
-	.news-form {
-		width: 60%;
-	}
-}
-*/
-
-@media only sreen and (max-width: 600px) {
-	main #newsletter .signupForm {
-		display: none;
-	}
-	}
 
 
 /*===================================
@@ -1012,7 +648,106 @@ footer ul:first-child {
 	margin-left: 35rem;
 }
 
+/*===================================
+Additional Styles
+===================================*/
+@media only screen and (max-width: 1280px) {
+	.head-nav li {
+		float: left;
+		color: #DFCEE4;
+	}
+
+	.head-nav li {
+		float: left;
+	}
+
+	footer ul:first-child {
+		margin-left: 24rem;
+	}
+}
+
+
+@media only screen and (max-width: 1204px) {
+	.hotspot video {
+		width: 12em;
+		margin-left: 0rem;
+	}
+
+	#features2 {
+		margin-bottom: 3.5rem;
+	}
+}
+
+@media only screen and (max-width: 1160px) {
+
+	.button,
+	.button2 {
+		flex: 2 1 auto;
+		float: none;
+		padding: 1rem .75rem 1rem .75rem;
+		max-width: 100%;
+		height: auto;
+		align-content: center;
+		text-align: center;
+	}
+
+	#sign-up-cta {
+		justify-content: center;
+		max-width: 65%;
+		height: auto;
+		margin-left: 1rem;
+		top: 3.5rem;
+	}
+}
+
+@media only screen and (max-width: 1050px) {
+	header {
+		width: 100%;
+		height: auto;
+	}
+
+	main {
+		width: 100%;
+		height: auto;
+	}
+}
+
+@media only screen and (max-width: 940px) {
+
+	.button,
+	.button2 {
+
+		padding: 1rem .5rem 1rem .5rem;
+	}
+}
+
 @media only screen and (max-width: 920px) {
+
+	.button,
+	.button2 {
+		padding: .6rem .4em .6rem .4rem;
+	}
+
+	.input {
+		left: 1rem;
+	}
+
+	.label {
+		left: 1rem;
+	}
+
+	.submitBtn {
+		margin-left: 1rem;
+	}
+
+	.news-form {
+		width: 75%;
+	}
+
+	.newsletter-title {
+		padding-top: 1rem;
+	}
+
 	#newsletter {
 		margin-top: 30rem;
 	}
@@ -1022,8 +757,294 @@ footer ul:first-child {
 	}
 }
 
-@media only screen and (max-width: 1280px) {
-	footer ul:first-child {
-		margin-left: 24rem;
+@media only screen and (max-width: 980px) {
+	#sign-up-section {
+		padding-top: 2rem;
+		background: white;
+	}
+
+	.hotspot {
+		width: 12em;
+	}
+
+	.hotspot .empty-text {
+		width: 100%;
+		height: auto;
+	}
+
+	#features,
+	#features2 {
+		flex-direction: column;
+		justify-content: space-between;
+	}
+
+	#features .feature.row2 h2 {
+		padding-top: 8rem;
+	}
+
+	#features2 .feature.row3,
+	#features2 .feature.row4 {
+		margin-top: 9rem;
+	}
+
+	#features .feature.row1 h2 {
+		margin-top: .1rem;
+	}
+
+	#features {
+		padding-top: 3rem;
+	}
+
+	#features2 .row3 {
+		padding-top: 5rem;
+		padding-bottom: 0rem;
+		margin-bottom: 0rem;
+	}
+
+	#features2 .row4 {
+		padding-top: 0rem;
+	}
+
+	#features2 .feature.row4 {
+		margin-top: 6rem;
+	}
+
+	#newsletter {
+		clear: both;
+		margin-top: 30rem;
+	}
+}
+
+@media only screen and (max-width: 897px) {
+	.main-content {
+		top: 0rem;
+	}
+
+	.buttonGroup {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
+
+	.button,
+	.button2 {
+		flex: auto;
+		place-content: .05rem;
+		border-radius: 3px;
+		font-size: .5rem;
+		text-align: center;
+		max-width: 100%;
+		height: auto;
+		padding: .5rem .3rem .5rem .3rem;
+		border-radius: .25rem;
+	}
+}
+
+@media only screen and (max-width: 870px) {
+
+	.button,
+	.button2 {
+		padding: 2%;
+		margin: .2rem;
+		border-radius: .25rem;
+	}
+}
+
+@media only screen and (max-width: 830px) {
+
+	.button,
+	.button2 {
+		padding: .75rem .2rem;
+		border-radius: .25rem;
+	}
+}
+
+@media only screen and (max-width: 813px) {
+
+	.button,
+	.button2 {
+		margin: .1rem;
+		border-radius: .25rem;
+	}
+}
+
+@media only screen and (max-width: 787px) {
+
+	.button,
+	.button2 {
+		padding: 4%;
+		margin: 1rem;
+		border-radius: .25rem;
+	}
+
+	h2 {
+		font-size: 1rem;
+	}
+
+	.striking {
+		font-size: .75rem;
+		margin-bottom: .3rem;
+		margin-top: .3rem;
+		margin-left: .15rem;
+	}
+
+	span {
+		font-size: .6rem;
+	}
+
+	.main-content {
+		top: 2.3rem;
+	}
+
+	.buttonGroup {
+		display: flex;
+		align-items: center;
+		justify-content: stretch;
+	}
+
+
+	.button,
+	.button2 {
+		display: flex;
+		flex: auto;
+		margin-top: .4rem;
+		padding-top: .75rem;
+		padding-bottom: .75rem;
+		padding-right: 6%;
+		padding-left: 6%;
+		font-size: .5rem;
+		text-align: center;
+		width: 100%;
+		height: auto;
+		border-radius: .25rem;
+	}
+}
+
+@media only screen and (max-width: 710px) {
+
+	.button,
+	.button2 {
+		padding: .75rem .5rem;
+		border-radius: .25rem;
+	}
+}
+
+@media only screen and (max-width: 680px) {
+
+	.button,
+	.button2 {
+		padding: 1rem .4rem;
+		border-radius: .25rem;
+	}
+
+	.mobile ul {
+		display: none;
+	}
+
+	.head-nav ul {
+		display: none;
+	}
+
+	header .content {
+		padding: .5rem 0;
+	}
+
+	.mobile ul {
+		display: left;
+		align-items: left;
+		width: 100%;
+	}
+
+	.logo {
+		display: none;
+	}
+
+	#sign-up-section {
+		justify-content: center;
+		align-items: start;
+		background-image: none;
+		background-position: top;
+		width: auto;
+		height: auto;
+		position: relative;
+		padding-bottom: 0;
+	}
+
+	#sign-up-cta {
+		margin-top: 0rem;
+		top: 3rem;
+		padding: 1rem 0 .5rem 0;
+		max-width: 100%;
+		margin-bottom: 0;
+		margin-left: 0;
+		border-radius: 0;
+	}
+
+	.hero {
+		justify-content: center;
+		align-items: start;
+	}
+}
+
+@media only screen and (max-width: 654px) {
+
+	.button,
+	.button2 {
+		padding: 1rem .75rem;
+		border-radius: .25rem;
+	}
+}
+
+@media only sreen and (max-width: 600px) {
+	main #newsletter .signupForm {
+		display: none;
+	}
+}
+
+@media only screen and (max-width: 505px) {
+
+	.button,
+	.button2 {
+		padding: 4%;
+		border-radius: .25rem;
+	}
+}
+
+@media only screen and (max-width: 435px) {
+
+	.button,
+	.button2 {
+		padding: 1%;
+		margin: .15rem;
+		border-radius: .25rem;
+	}
+}
+
+@media only screen and (max-width: 420px) {
+
+	#sign-up-section {
+		justify-content: center;
+		align-items: start;
+		background-image: none;
+		background-position: top;
+		width: auto;
+		height: auto;
+		position: relative;
+		padding-bottom: 0;
+	}
+
+	#sign-up-cta {
+		margin-top: 0rem;
+		top: 3rem;
+		padding: 1rem 0 .5rem 0;
+		max-width: 100%;
+		margin-bottom: 0;
+		margin-left: 0;
+		border-radius: 0;
+	}
+
+	.hero {
+		justify-content: center;
+		align-items: start;
 	}
 }
